# aiosipua

./: .gitignore  LICENSE  Makefile  README.md  pyproject.toml
examples/: dtmf_ivr.py  echo_server.py  roomkit_prototype.py
src/aiosipua/: __init__.py  dialog.py  headers.py  message.py  rtp_bridge.py  sdp.py  transaction.py  transport.py  uac.py  uas.py  utils.py
tests/: test_dialog.py  test_headers.py  test_message.py  test_negotiate.py  test_roundtrip.py  test_rtp_bridge.py  test_sdp.py  test_transaction.py  test_transport.py  test_uac.py  test_uas.py  test_utils.py
