[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "aiosipua"
version = "0.1.2"
description = "Asyncio SIP micro-library for Python"
readme = "README.md"
license = "BSD-3-Clause"
requires-python = ">=3.11"
authors = [
    { name = "Sylvain Boily", email = "sylvainboilydroid@gmail.com" },
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Framework :: AsyncIO",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: BSD License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Communications :: Telephony",
    "Typing :: Typed",
]

[project.optional-dependencies]
rtp = ["aiortp>=0.1.0"]

[project.urls]
Homepage = "https://github.com/anganyAI/aiosipua"
Repository = "https://github.com/anganyAI/aiosipua"

[tool.hatch.build.targets.wheel]
packages = ["src/aiosipua"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"

[tool.mypy]
python_version = "3.11"
strict = true
warn_return_any = true
warn_unused_configs = true

[tool.ruff]
target-version = "py311"
line-length = 99

[tool.ruff.lint]
select = ["E", "F", "W", "I", "N", "UP", "B", "A", "SIM", "TCH"]

[dependency-groups]
dev = [
    "mypy>=1.0",
    "pytest>=7.0",
    "pytest-asyncio>=0.21",
    "ruff>=0.4",
]
